# mcp-pool

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  deployment-patterns.md  index.md  migration.md  performance.md  quickstart.md
docs/javascripts/: mermaid.js
src/mcpool/: __init__.py  autoscaler.py  cache.py  circuit.py  cloudwatch.py  config.py  errors.py  health.py  hooks.py  langchain.py  manager.py  metrics.py  oauth.py  pool.py  prometheus.py  rate_limiter.py  session.py  telemetry.py  tenant.py
tests/: conftest.py
tests/benchmarks/: test_microbenchmarks.py  test_scenarios.py
tests/fuzz/: test_pool_fuzz.py
tests/performance/: test_complexity.py
tests/unit/: test_affinity.py  test_auth_provider.py  test_autoscaler.py  test_cache.py  test_call_tool.py  test_cloudwatch.py  test_config.py  test_degradation.py  test_health.py  test_health_probes.py  test_langchain.py  test_manager.py  test_metrics.py  test_oauth.py  test_pool.py  test_rate_limiter.py  test_readiness.py  test_resize.py  test_schema_detection.py  test_session.py  test_telemetry.py  test_tenant.py  test_transport_factory.py
